--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   margin: 0;
   padding: 1rem;
   background: #f5f5f5;
-  font-size: 18px; /* larger base text */
+  font-size: 22px; /* larger base text */
 }
 
 h1 {
   text-align: center;
-  font-size: 2rem;
+  font-size: 3rem;
   margin-bottom: 1rem;
 }
 
@@ -26,18 +26,18 @@ form, .filter-bar, .pagination {
 input[type="file"],
 input[type="text"] {
   padding: 0.75rem;
-  font-size: 1rem;
+  font-size: 2.2rem;
   width: 80%;
   max-width: 400px;
   margin: 0.5rem auto;
   display: block;
   border: 1px solid #ccc;
-  border-radius: 8px;
+  border-radius: 9px;
 }
 
 button {
   padding: 0.75rem 1.5rem;
-  font-size: 1.1rem;
+  font-size: 2rem;
   background-color: #007bff;
   color: white;
   border: none;
@@ -54,7 +54,7 @@ button:hover {
   text-align: center;
   color: green;
   font-weight: bold;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 #gallery {
@@ -82,7 +82,7 @@ button:hover {
 <body>
   <h1>📸 Качете вашите сватбени снимки или видеа</h1>
   <div>
-    <label for="files" class="btn">Избери файлове</label>
+    <label for="files">Избери файлове:</label>
     <input type="file" id="fileInput" multiple >
   </div>
   <button onclick="upload()">Качи</button>
