--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 h1 {
   text-align: center;
-  font-size: 3rem;
+  font-size: 5rem;
   margin-bottom: 1rem;
 }
 
@@ -26,7 +26,7 @@ form, .filter-bar, .pagination {
 input[type="file"],
 input[type="text"] {
   padding: 0.75rem;
-  font-size: 2.2rem;
+  font-size: 3rem;
   width: 80%;
   max-width: 400px;
   margin: 0.5rem auto;
@@ -37,7 +37,7 @@ input[type="text"] {
 
 button {
   padding: 0.75rem 1.5rem;
-  font-size: 2rem;
+  font-size: 3rem;
   background-color: #007bff;
   color: white;
   border: none;
@@ -77,17 +77,24 @@ button:hover {
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
+    iframe {
+  flex: 1;
+  border: none;
+  width: 100%;
+  height: 100%;
+}
   </style>
 </head>
 <body>
   <h1>📸 Качете вашите сватбени снимки или видеа</h1>
+    <form id="uploadForm">
   <div>
-    <label for="files">Избери файлове:</label>
+    <label for="file">Избери файлове:</label>
     <input type="file" id="fileInput" multiple >
   </div>
   <button onclick="upload()">Качи</button>
   <p id="status"></p>
-
+    </form>
   <h2>Галерия:</h2>
   <div id="gallery"></div>
 
@@ -160,9 +167,10 @@ function upload() {
 
     const iframe = document.createElement("iframe");
     iframe.src = `https://drive.google.com/embeddedfolderview?id=1Zko3g5J8RbKXYT5sOs5szvZuQZovGlZS#grid`;
+    iframe.allowFullscreen = true;
     iframe.style.width = "100%";
-    iframe.style.height = "100%";
-    iframe.style.border = "2px";
+    iframe.style.height = "100vh";
+    iframe.style.border = "none";
 
     container.appendChild(iframe);
   }
