--- a/index.html
+++ b/index.html
@@ -4,95 +4,16 @@
   <meta charset="UTF-8">
   <title>Сватбена Галерия</title>
   <style>
-    body {
-  font-family: "Segoe UI", sans-serif;
-  margin: 0;
-  padding: 1rem;
-  background: #f5f5f5;
-  font-size: 22px; /* larger base text */
-}
-
-h1 {
-  text-align: center;
-  font-size: 5rem;
-  margin-bottom: 1rem;
-}
-
-form, .filter-bar, .pagination {
-  text-align: center;
-  margin-bottom: 1.5rem;
-}
-
-input[type="file"],
-input[type="text"] {
-  padding: 0.75rem;
-  font-size: 3rem;
-  width: 80%;
-  max-width: 400px;
-  margin: 0.5rem auto;
-  display: block;
-  border: 1px solid #ccc;
-  border-radius: 9px;
-}
-
-button {
-  padding: 0.75rem 1.5rem;
-  font-size: 3rem;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  margin-top: 10px;
-}
-
-button:hover {
-  background-color: #0056b3;
-}
-
-#message {
-  text-align: center;
-  color: green;
-  font-weight: bold;
-  margin-bottom: 2rem;
-}
-
-#gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  gap: 10px;
-}
-
-.file-item img,
-.file-item video {
-  width: 100%;
-  border-radius: 8px;
-}
-
-.file-item {
-  overflow: hidden;
-  word-break: break-word;
-  background: white;
-  padding: 10px;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-}
-    iframe {
-  flex: 1;
-  border: none;
-  width: 100%;
-  height: 100%;
-}
+    body { font-family: sans-serif; text-align: center; margin: 2rem; }
+    img { max-width: 150px; margin: 10px; border-radius: 10px; }
   </style>
 </head>
 <body>
   <h1>📸 Качете вашите сватбени снимки или видеа</h1>
-    <form id="uploadForm">
-      
-    <input type="file" id="fileInput" multiple >
+  <input type="file" id="fileInput" multiple />
   <button onclick="upload()">Качи</button>
   <p id="status"></p>
-    </form>
+
   <h2>Галерия:</h2>
   <div id="gallery"></div>
 
@@ -102,9 +23,9 @@ function upload() {
   const files = document.getElementById("fileInput").files;
   if (!files.length) return alert("Изберете поне един файл.");
 
-  const scriptURL = "https://script.google.com/macros/s/AKfycbwyo_YDRD9oLvCTXRIyPMCzcKrQ3YkUvQC2VGImnJmuXrCqMT8aPiC4mAo8DEKR2JJk/exec"; // replace with your Apps Script URL
+  const scriptURL = "https://script.google.com/macros/s/AKfycbzsSWMoHAI5Qp-zX2fA9ItWhunRmI5RWTl8lXWVBpwWrgw3_u1wYrBocN3fKqa5Lgg/exec"; // replace with your Apps Script URL
   const status = document.getElementById("status");
-  status.textContent = `Качване на ${files.length} файлове...`;
+  status.textContent = `Качване ${files.length} файлове...`;
 
   let uploadedCount = 0;
   let errors = 0;
@@ -165,9 +86,8 @@ function upload() {
 
     const iframe = document.createElement("iframe");
     iframe.src = `https://drive.google.com/embeddedfolderview?id=1Zko3g5J8RbKXYT5sOs5szvZuQZovGlZS#grid`;
-    iframe.allowFullscreen = true;
     iframe.style.width = "100%";
-    iframe.style.height = "100vh";
+    iframe.style.height = "600px";
     iframe.style.border = "none";
 
     container.appendChild(iframe);
