--- a/index.html
+++ b/index.html
@@ -4,8 +4,50 @@
   <meta charset="UTF-8">
   <title>Сватбена Галерия</title>
   <style>
-    body { font-family: sans-serif; text-align: center; margin: 2rem; }
-    img { max-width: 150px; margin: 10px; border-radius: 10px; }
+        body {
+          font-family: "Segoe UI", sans-serif;
+          margin: 0;
+          padding: 1rem;
+          background: #f5f5f5;
+          font-size: 22px; /* larger base text */
+        }
+        
+        h1 {
+          text-align: center;
+          font-size: 5rem;
+          margin-bottom: 1rem;
+        }
+      input[type="file"],
+      input[type="text"] {
+        padding: 0.75rem;
+        font-size: 3rem;
+        width: 80%;
+        max-width: 400px;
+        margin: 0.5rem auto;
+        display: block;
+        border: 1px solid #ccc;
+        border-radius: 9px;
+      }
+      button {
+    padding: 0.75rem 1.5rem;
+    font-size: 3rem;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-top: 10px;
+    }
+    
+    button:hover {
+      background-color: #0056b3;
+    }
+    iframe {
+      flex: 1;
+      border: none;
+      width: 100%;
+      height: 100%;
+    }
   </style>
 </head>
 <body>
@@ -25,7 +67,7 @@ function upload() {
 
   const scriptURL = "https://script.google.com/macros/s/AKfycbzsSWMoHAI5Qp-zX2fA9ItWhunRmI5RWTl8lXWVBpwWrgw3_u1wYrBocN3fKqa5Lgg/exec"; // replace with your Apps Script URL
   const status = document.getElementById("status");
-  status.textContent = `Качване ${files.length} файлове...`;
+  status.textContent = `Качване на ${files.length} файлове...`;
 
   let uploadedCount = 0;
   let errors = 0;
@@ -77,7 +119,7 @@ function upload() {
         ? `Всички ${uploadedCount} файлове са успешно качени!`
         : `Качени ${uploadedCount} файлове с ${errors} грепка.`;
   })();
-  window.onload = loadGalleryIframe;
+  loadGalleryIframe()
 }
 
     function loadGalleryIframe() {
@@ -86,8 +128,9 @@ function upload() {
 
     const iframe = document.createElement("iframe");
     iframe.src = `https://drive.google.com/embeddedfolderview?id=1Zko3g5J8RbKXYT5sOs5szvZuQZovGlZS#grid`;
+    iframe.allowFullscreen = true;
     iframe.style.width = "100%";
-    iframe.style.height = "600px";
+    iframe.style.height = "100vh";
     iframe.style.border = "none";
 
     container.appendChild(iframe);
