--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Сватбена Галерия</title>
   <style>
         body {
@@ -145,7 +146,9 @@ function upload() {
     }
   }
 
-    window.onload = loadGalleryIframe;
+        window.onload = () => {
+      loadGalleryIframe();
+    };
   </script>
 </body>
 </html>
