--- a/index.html
+++ b/index.html
@@ -5,75 +5,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Сватбена Галерия</title>
   <style>
-    html, body {
-      margin: 0; 
-      padding: 0;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      font-family: "Segoe UI", sans-serif;
-      background: #f5f5f5;
-      font-size: 22px; /* larger base text */
-    }
+body {
+  font-size: 18px; /* smaller base on small screens */
+}
 
-    body > * {
-      /* Prevent horizontal overflow */
-      max-width: 100vw;
-      box-sizing: border-box;
-    }
+/* Medium+ screens */
+@media (min-width: 600px) {
+  body {
+    font-size: 22px;
+  }
+}
 
-    h1 {
-      text-align: center;
-      font-size: 5rem;
-      margin: 1rem 0 0.5rem 0;
-      flex-shrink: 0;
-    }
+input[type="file"],
+input[type="text"],
+button {
+  font-size: 1.5rem; /* ~27px on 18px base */
+  padding: 0.5rem;
+  max-width: 400px;
+  width: 80%;
+  margin: 0.5rem auto;
+  display: block;
+}
 
-    input[type="file"],
-    input[type="text"] {
-      padding: 0.75rem;
-      font-size: 3rem;
-      width: 80%;
-      max-width: 400px;
-      margin: 0.5rem auto;
-      display: block;
-      border: 1px solid #ccc;
-      border-radius: 9px;
-      flex-shrink: 0;
-    }
+@media (min-width: 600px) {
+  input[type="file"],
+  input[type="text"],
+  button {
+    font-size: 2rem; /* ~44px on 22px base */
+    padding: 0.75rem;
+  }
+}
 
-    button {
-      padding: 0.75rem 1.5rem;
-      font-size: 3rem;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      margin: 1rem auto;
-      flex-shrink: 0;
-      max-width: 400px;
-      width: 80%;
-      display: block;
-    }
+h1 {
+  font-size: 2.5rem; /* smaller on mobile */
+  margin: 1rem 0 0.5rem;
+  text-align: center;
+}
 
-    button:hover {
-      background-color: #0056b3;
-    }
+@media (min-width: 600px) {
+  h1 {
+    font-size: 5rem;
+  }
+}
 
-    #gallery {
-      flex: 1 1 auto; /* take remaining space */
-      display: flex;
-      margin: 0 1rem 1rem 1rem;
-      min-height: 0; /* necessary for flex scrolling */
-    }
-
-    #gallery iframe {
-      flex: 1 1 auto;
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
   </style>
 </head>
 
