--- a/index.html
+++ b/index.html
@@ -5,48 +5,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Сватбена Галерия</title>
   <style>
-body {
-  font-size: 18px; /* smaller base on small screens */
-}
+        body {
+          font-family: "Segoe UI", sans-serif;
+          margin: 0;
+          padding: 1rem;
+          background: #f5f5f5;
+          font-size: 22px; /* larger base text */
+        }
 
-/* Medium+ screens */
-@media (min-width: 600px) {
-  body {
-    font-size: 22px;
-  }
-}
+        h1 {
+          text-align: center;
+          font-size: 5rem;
+          margin-bottom: 1rem;
+        }
+      input[type="file"],
+      input[type="text"] {
+        padding: 0.75rem;
+        font-size: 3rem;
+        width: 80%;
+        max-width: 400px;
+        margin: 0.5rem auto;
+        display: block;
+        border: 1px solid #ccc;
+        border-radius: 9px;
+      }
+      button {
+    padding: 0.75rem 1.5rem;
+    font-size: 3rem;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-top: 10px;
+    margin: 1rem auto 0 auto;
+    }
 
-input[type="file"],
-input[type="text"],
-button {
-  font-size: 1.5rem; /* ~27px on 18px base */
-  padding: 0.5rem;
-  max-width: 400px;
-  width: 80%;
-  margin: 0.5rem auto;
-  display: block;
-}
+    button:hover {
+      background-color: #0056b3;
+    }
+    #gallery {
+      flex: 1 1 auto;  /* fill remaining space */
+      min-height: 0;   /* important for flexbox scrolling */
+      display: flex;   /* to allow iframe to fill */
+      flex-direction: column;
+      margin: 0 1rem 1rem 1rem;
+    }
 
-@media (min-width: 600px) {
-  input[type="file"],
-  input[type="text"],
-  button {
-    font-size: 2rem; /* ~44px on 22px base */
-    padding: 0.75rem;
-  }
-}
-
-h1 {
-  font-size: 2.5rem; /* smaller on mobile */
-  margin: 1rem 0 0.5rem;
-  text-align: center;
-}
-
-@media (min-width: 600px) {
-  h1 {
-    font-size: 5rem;
-  }
-}
+    #gallery iframe {
+      flex: 1 1 auto;  /* iframe fills the container */
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
 
   </style>
 </head>
