--- a/index.html
+++ b/index.html
@@ -44,19 +44,10 @@
     button:hover {
       background-color: #0056b3;
     }
-    #gallery {
-      flex: 1 1 auto;  /* fill remaining space */
-      min-height: 0;   /* important for flexbox scrolling */
-      display: flex;   /* to allow iframe to fill */
-      flex-direction: column;
-    }
-
-    #gallery iframe {
-      flex: 1 1 auto;  /* iframe fills the container */
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
+iframe {
+  width: 100%;
+  height: 60vh;
+}
 
   </style>
 </head>
