--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
           font-family: "Segoe UI", sans-serif;
           margin: 0;
           padding: 1rem;
+          height: 100vh;
           background: #f5f5f5;
           font-size: 15px; /* larger base text */
         }
 
         h1 {
           text-align: center;
-          font-size: 2.5rem;
+          font-size: 1.7rem;
           margin-bottom: 0.2rem;
         }
       input[type="file"],
       input[type="text"] {
         padding: 0.75rem;
-        font-size: 2.3rem;
+        font-size: 2rem;
         width: 90%;
         max-width: 400px;
         margin: 0.5rem auto;
@@ -31,13 +32,13 @@
       }
       button {
     padding: 0.75rem 1.5rem;
-    font-size: 3rem;
+    font-size: 2.6rem;
     background-color: #007bff;
     color: white;
     border: none;
     border-radius: 8px;
     cursor: pointer;
-    margin-top: 10px;
+    margin-top: 8px;
     margin: 1rem auto 0 auto;
     }
 
