--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@
         }
 
         h1 {
-          text-align: center;
-          font-size: 1.7rem;
+          text-align: justify;
+          font-size: 1.3rem;
           margin-bottom: 0.2rem;
         }
+    div {
+  text-align: justify;
+  text-justify: inter-word;
+}
       input[type="file"],
       input[type="text"] {
         padding: 0.75rem;
-        font-size: 2rem;
+        font-size: 1.8rem;
         width: 90%;
         max-width: 400px;
         margin: 0.5rem auto;
@@ -32,11 +36,11 @@
       }
       button {
     padding: 0.75rem 1.5rem;
-    font-size: 2.6rem;
+    font-size: 1.5rem;
     background-color: #007bff;
     color: white;
     border: none;
-    border-radius: 8px;
+    border-radius: 5px;
     cursor: pointer;
     margin-top: 8px;
     margin: 1rem auto 0 auto;
