--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         h1 {
           text-align: justify;
-          font-size: 1.4rem;
+          font-size: 1.5rem;
           margin-bottom: 0.2rem;
         }
     div {
@@ -65,7 +65,7 @@ iframe {
   <input type="file" id="fileInput" multiple />
   <button onclick="upload()">Качи</button>
   <p id="status"></p>
-  <p>Инструкции:</p>
+  <p><b>Инструкции:</b></p>
   <p>1. Натисни бутона избор на файлове</p>
   <p>2. Маркирай снимките и видеата</p>
   <p>3. Натисни бутона Качи</p>
