update info section

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ iframe {
   <p>1. Натисни бутона избор на файлове</p>
   <p>2. Маркирай снимките и видеата</p>
   <p>3. Натисни бутона Качи</p>
+  <p>4. Изчакай да се появи съобщението: "Всички файлове са успешно качени!"</p>
   <h2>Галерия:</h2>
   <div id="gallery"></div>
 
